# internal/model/item_category_model.go
@@ -1,0 +1,19 @@
+package model
+
+import (
+	"time"
+)
+
+type MstItemCategory struct {
+	ID          uint       `gorm:"primaryKey" json:"id"`
+	Code        string     `json:"code"`
+	Description string     `json:"description"`
+	Remarks     string     `json:"remarks,omitempty"`
+	IDCreatedby uint       `json:"id_createdby,omitempty"`
+	IDUpdatedby uint       `json:"id_updatedby,omitempty"`
+	CreatedAt   *time.Time `gorm:"autoCreateTime" json:"created_at,omitempty"`
+	UpdatedAt   *time.Time `gorm:"autoUpdateTime" json:"updated_at,omitempty"`
+
+	CreatedBy *MstUser `gorm:"foreignKey:ID;references:IDCreatedby" json:"created_by,omitempty"`
+	UpdatedBy *MstUser `gorm:"foreignKey:ID;references:IDUpdatedby" json:"updated_by,omitempty"`
+}
